--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 bin/
 obj/
 
-appsettings.json
-appsettings.Development.json
+# Configuration files
+**/appsettings.json
+**/appsettings.*.json
+!**/appsettings.example.json
